# multimathv2

./: CMakeLists.txt  Makefile  test.cpp
include/: .benchmark.h.swp  benchmark.h  googlebenchmark.h
include/mathomp/: mathomp.h
src/: gbenchmark.cpp  mathomp.cpp
